--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -12,6 +12,12 @@ remappings = [
 
 # RPC Configuration
 [rpc_endpoints]
+base_mainnet = "https://mainnet.base.org"
+base_sepolia = "https://sepolia.base.org"
 base = "https://mainnet.base.org"
+
+# Etherscan configuration for contract verification
+[etherscan]
+base = { key = "${BASESCAN_API_KEY}", url = "https://api.basescan.org/api" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
